<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="about_copyright">Copyright © 2013–2016</string>
    <string name="about_list_feedback">Feedback</string>
    <string name="about_list_new_version">Check for Update</string>
    <string name="about_list_score">Rate</string>
    <string name="about_name">Nut</string>
    <string name="about_right_reserved">Zizai Tech. All rights Reserved</string>
    <string name="action_add_new_friend">Add</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_edit">Edit</string>
    <string name="action_finish">Finish</string>
    <string name="action_help">Help</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">Skip</string>
    <string name="action_submit">Submit</string>
    <string name="add_friend_btn_share">Recommend Nut app</string>
    <string name="add_friend_btn_share_hint">Invite your friends to download Nut app</string>
    <string name="add_friend_notify_msg">%1$ssent you a friend request</string>
    <string name="add_friend_title">Add Friends</string>
    <string name="add_friend_toast_add_success">Friend request sent</string>
    <string name="add_friend_toast_friend_exist">%1$s has already accepted your request.</string>
    <string name="alert_sound_alarm">Alarm</string>
    <string name="alert_sound_careful">Caution</string>
    <string name="alert_sound_clever">Bright</string>
    <string name="alert_sound_dangerous">Danger</string>
    <string name="alert_sound_def">Default</string>
    <string name="alert_sound_long_call">Trump</string>
    <string name="alert_sound_magical">Fancy</string>
    <string name="alert_sound_mystery">Psychedelic</string>
    <string name="alert_sound_sweet">Melody</string>
    <string name="alert_sound_trumpet">Horn</string>
    <string name="app_alert_sound">Sounds</string>
    <string name="app_name">Nut</string>
    <string name="app_notice_number">Duration</string>
    <string name="bind_account_fail">Failed to bind</string>
    <string name="bind_anim_paper_hint">Please pull out the insulating paper and fasten the enclosure.</string>
    <string name="bind_anim_paper_next">Next</string>
    <string name="bind_anim_paper_title">Tip</string>
    <string name="bind_btn_no_tracker_help">No tracker detected?</string>
    <string name="bind_btn_receive_captcha">Acquire</string>
    <string name="bind_btn_receive_captcha_countdown">Reacquire(%1$s)</string>
    <string name="bind_btn_retry_receive_captcha">Reacquire</string>
    <string name="bind_btn_select_name_key">Key</string>
    <string name="bind_btn_select_name_laptops">Laptops</string>
    <string name="bind_btn_select_name_others">Others</string>
    <string name="bind_btn_select_name_satchel">Satchel</string>
    <string name="bind_btn_select_name_suitcase">Suitcase</string>
    <string name="bind_btn_select_name_wallet">Wallet</string>
    <string name="bind_btn_sent_verify_email">Resend verification email</string>
    <string name="bind_choose_scanned_result">Please select the found tracker</string>
    <string name="bind_connect_error_btn">Reconnect</string>
    <string name="bind_connect_oauth_error">Your tracker is being used under another account.</string>
    <string name="bind_dbtn_reselect">Reselect</string>
    <string name="bind_device_add_photo_tips">Add Photo</string>
    <string name="bind_device_duplicate_name">Item name already exists</string>
    <string name="bind_device_failed">Add failure, try again later.</string>
    <string name="bind_device_name_empty">Item names is null</string>
    <string name="bind_device_name_limit">item names can not be more than %1$s characters</string>
    <string name="bind_device_timeout">Timeout, please try again</string>
    <string name="bind_disconnecting">Disconnecting…</string>
    <string name="bind_dmsg_not_flash">Please choose another tracker from the list.</string>
    <string name="bind_email_push_active">Congrats! Email verified!</string>
    <string name="bind_email_unverified_hint">Unverified email, please login and check the email for verification.</string>
    <string name="bind_error_connect_title">Connection Timeout</string>
    <string name="bind_error_scan_title">No tracker found</string>
    <string name="bind_error_text1">Please try:</string>
    <string name="bind_error_text2">Restart your phone Bluetooth.</string>
    <string name="bind_error_text3">Make sure the tracker is started (you may need to press the button on the tracker)</string>
    <string name="bind_error_text4">Please put your phone close to the tracker (within 4inch)</string>
    <string name="bind_hint_code_send">Auth code will be sent to your phone</string>
    <string name="bind_hint_please_bind_phone">Please bind your mobile number for safety.</string>
    <string name="bind_nut_not_flash">Tracker not flashing?</string>
    <string name="bind_others_open_hint">Please refer to the manual on how to use.</string>
    <string name="bind_phone_near_device">Please put your phone close to the tracker</string>
    <string name="bind_provision" formatted="false">"I Agree
%1Terms of use%1 and %2Privacy Policy%2"</string>
    <string name="bind_receive_captcha_tips">Verify Message Sent to %1$s</string>
    <string name="bind_receive_failed">Cannot receive auth code?</string>
    <string name="bind_submit_captcha">Submit Auth Code</string>
    <string name="bind_tap_countdown">%1$ss</string>
    <string name="bind_tap_nut_mini">Please tap the tracker with flashing lights</string>
    <string name="bind_tip_tap_hard">No reaction? Please try to knock it harder</string>
    <string name="dbtn_camera">Take Photo</string>
    <string name="dbtn_cancel">Cancel</string>
    <string name="dbtn_gallery">Gallery</string>
    <string name="friend_list_title">My Friends</string>
    <string name="home_new_find">new</string>
    <string name="home_not_disturb_1hour">1 Hour</string>
    <string name="home_not_disturb_2hour">2 Hour</string>
    <string name="home_not_disturb_30min">30 Minutes</string>
    <string name="home_not_disturb_4hour">4 Hour</string>
    <string name="home_pop_window_not_disturb_time">Set the duration for Interim Silent Mode</string>
    <string name="more_fragment_nut_story">User Stories</string>
    <string name="more_fragment_share_nut">Recommend Nut app</string>
    <string name="more_list_about">About Us</string>
    <string name="more_list_buy_nut">Official Store</string>
    <string name="more_list_features">How to use</string>
    <string name="more_user_default_name">My nut</string>
    <string name="not_disturb_setting_title">Silent Mode</string>
    <string name="privacy_agreement">Privacy Policy</string>
    <string name="quick_add_friends">Here you can add your friends and check their locations.</string>
    <string name="quick_add_friends_now">Add Friends</string>
    <string name="quick_add_nut">Here you can add your Nut hardware.</string>
    <string name="quick_add_nut_now">Add Nut</string>
    <string name="quick_add_welcome">Welcome to use Nut</string>
    <string name="settings_delete_nut">Delete</string>
    <string name="settings_device_alert">Nut Alert</string>
    <string name="settings_device_firmware_update">Firmware Update</string>
    <string name="settings_find_mode_tips">When Find-it Mode is enabled, all anti-lost alerts will be turned off</string>
    <string name="settings_find_region">Seeking Region</string>
    <string name="settings_phone_alert">Phone Alert</string>
    <string name="settings_share_manage">Group Find</string>
    <string name="settings_tab_text_mode_look_for">Find-it Mode</string>
    <string name="settings_undo_declare_lost">Undo</string>
    <string name="use_clause">Terms of use</string>
    <string name="more_list_app_config">App参数配置</string>
    <string name="settings_list_config">nut参数设置</string>
</resources>