<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/t3" android:textColor="@color/c3" android:layout_gravity="end" android:id="@id/tv_skip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_skip" />
    <TextView android:textSize="36.0sp" android:textColor="@color/c6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:text="@string/quick_add_welcome" />
    <TextView android:textSize="@dimen/t3" android:textColor="@color/c2" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/quick_add_friends" />
    <Button android:textSize="16.0sp" android:textColor="@color/c5" android:id="@id/btn_add_friend" android:background="@drawable/bg_btn_green_selector" android:layout_width="120.0dip" android:layout_height="44.0dip" android:layout_marginTop="12.0dip" android:text="@string/quick_add_friends_now" />
    <TextView android:textSize="@dimen/t3" android:textColor="@color/c2" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/quick_add_nut" />
    <Button android:textSize="16.0sp" android:textColor="@color/c5" android:id="@id/btn_add_nut" android:background="@drawable/bg_btn_green_selector" android:layout_width="120.0dip" android:layout_height="44.0dip" android:layout_marginTop="12.0dip" android:text="@string/quick_add_nut_now" />
</LinearLayout>