<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#e5ffffff" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/t1" android:textColor="@color/c1" android:gravity="center_vertical" android:id="@id/tv_not_disturb_time_hint" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/home_pop_window_not_disturb_time" android:layout_marginStart="20.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tv_not_disturb_time_hint">
        <TextView android:textSize="@dimen/t1" android:textColor="@color/c2" android:gravity="center" android:id="@id/tv_half_hour" android:background="@drawable/bg_list_border_top_selector" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/home_not_disturb_30min" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/t1" android:textColor="@color/c2" android:gravity="center" android:id="@id/tv_one_hour" android:background="@drawable/bg_list_border_top_selector" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/home_not_disturb_1hour" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/t1" android:textColor="@color/c2" android:gravity="center" android:id="@id/tv_two_hour" android:background="@drawable/bg_list_border_top_selector" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/home_not_disturb_2hour" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/t1" android:textColor="@color/c2" android:gravity="center" android:id="@id/tv_four_hour" android:background="@drawable/bg_list_border_top_selector" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/home_not_disturb_4hour" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>