<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/c4" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="24.0dip" android:paddingEnd="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/img_inset_overtime" />
    <TextView android:textSize="@dimen/t1" android:textColor="@color/c1" android:gravity="center_horizontal" android:id="@id/tv_connect_error_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/bind_error_connect_title" />
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="30.0dip" android:src="@color/c3" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
    <TextView android:textSize="@dimen/t3" android:textColor="@color/c2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/bind_error_text1" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="@dimen/t3" android:textColor="@color/c2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/bind_error_text2" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_title_error" />
        <TextView android:textSize="@dimen/t3" android:textColor="@color/c2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/bind_error_text3" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_title_error" />
        <TextView android:textSize="@dimen/t3" android:textColor="@color/c2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/bind_error_text4" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_title_error" />
    </LinearLayout>
    <Button android:textSize="@dimen/t1" android:textColor="@color/c5" android:layout_gravity="bottom|center" android:id="@id/bt_bind_connect_error" android:background="@drawable/bg_btn_green_selector" android:paddingLeft="30.0dip" android:paddingTop="10.0dip" android:paddingRight="30.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/bind_connect_error_btn" />
</LinearLayout>