<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/c5" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/t1" android:textColor="@color/c1" android:gravity="center" android:id="@id/tv_camera" android:background="@drawable/bg_item_list_selector" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbtn_camera" />
    <TextView android:textSize="@dimen/t1" android:textColor="@color/c1" android:gravity="center" android:id="@id/tv_gallery" android:background="@drawable/bg_item_list_selector" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbtn_gallery" />
    <TextView android:textSize="@dimen/t1" android:textColor="@color/c7" android:gravity="center" android:id="@id/tv_cancel" android:background="@drawable/bg_item_list_selector" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbtn_cancel" />
</LinearLayout>